# ClassCreator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exampleArch.txt
config/: .header  CMakeLists.txt  file.cpp  file.hpp  header.txt  interface.hpp  main.cpp  makefile
doc/: about.txt  architecture_file_format.txt  exampleArch.txt  personalization.txt
inc/: Architecture.hpp  BabyWheel.hpp  Core.hpp  Dir.hpp  File.hpp  Parser.hpp  State.hpp  Writer.hpp
src/: Architecture.cpp  BabyWheel.cpp  Core.cpp  Dir.cpp  File.cpp  Parser.cpp  State.cpp  Writer.cpp  main.cpp
